# spotify-automation

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
data/: concrete_avalanche_spotify_cumulative.csv
src/spotify_automation/: __init__.py  buy_music_club.py  catalog.py  cli.py  loader.py  matcher.py  models.py  spotify.py  utils.py  web_page.py
